// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with error message 1`] = `
.c6 {
  font-size: 3rem;
  line-height: 3rem;
  text-transform: uppercase;
  font-weight: 400;
  font-family: 'Anton',Impact,sans-serif;
  -webkit-letter-spacing: 0.03rem;
  -moz-letter-spacing: 0.03rem;
  -ms-letter-spacing: 0.03rem;
  letter-spacing: 0.03rem;
}

.c13 {
  font-size: 1rem;
  line-height: 1rem;
  text-transform: inherit;
  font-weight: bold;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c16 {
  text-transform: inherit;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c19 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  padding: 0.5rem 1.25rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  font-size: 1rem;
  border-radius: 2rem;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
  height: 50px;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  background-color: #E52630;
  color: #FFFFFF;
}

.c19:hover {
  background-color: #890B11;
  color: #FFFFFF;
}

.c15 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 13px;
  font-size: 1.25rem;
  background-color: #FFFFFF;
  border: 1px solid;
  border-color: #E52630;
  box-shadow: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #000000;
}

.c15:focus {
  border: 1px solid #666;
}

.c15:focus::-webkit-input-placeholder {
  color: #666;
}

.c15:focus::-moz-placeholder {
  color: #666;
}

.c15:focus:-ms-input-placeholder {
  color: #666;
}

.c15:focus::placeholder {
  color: #666;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c17 {
  display: inline-block;
  color: red;
}

.c17:before {
  position: relative;
  content: '';
  top: 2px;
  vertical-align: middle;
  margin-right: 6px;
  background: url(mock.asset) left 0/100% no-repeat;
  width: 18px;
  height: 19px;
  display: inline-block;
  vertical-align: top;
  color: #E52630;
}

.c14 {
  visibility: border:0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c9 {
  text-align: left;
}

.c1 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  display: block;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.c1:hover,
.c1:focus {
  opacity: 0.6;
}

.c2 {
  width: 100%;
}

.c22 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 1rem;
  color: #FFFFFF;
  background-color: #2C0230;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
}

.c18 {
  margin-top: 1rem;
}

.c18 button {
  border-color: #2C0230;
  width: 100%;
  font-size: 1rem;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 1rem;
}

.c20 p {
  font-size: 1rem;
  line-height: 2rem;
}

.c20 p a {
  font-size: 1rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 1rem 0;
}

.c12 {
  width: 100%;
}

.c7 {
  margin-bottom: 1.5rem;
}

.c0 {
  width: 35px;
  height: 35px;
  display: inline-block;
}

.c3 {
  position: fixed;
  width: 100%;
  height: 100%;
  background-color: rgba(255,255,255,0.5);
  z-index: 100;
  top: 0;
  left: 0;
  overflow-y: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c3 div[aria-modal='true'] {
  padding: 2rem;
}

.c21 {
  position: absolute;
  top: 0;
  right: 0;
  width: 40px;
  height: 40px;
  margin-left: 0;
}

.c5 {
  width: 100%;
}

.c5 input {
  font-size: 1rem;
}

@media (min-width:740px) {
  .c19 {
    width: auto;
  }
}

@media (min-width:740px) {
  .c15 {
    max-width: 290px;
  }
}

@media (min-width:740px) {
  .c18 button {
    width: auto;
  }
}

@media (min-width:740px) {
  .c21 {
    margin: 4rem 0 0;
    right: 25%;
  }
}

@media (min-width:740px) {
  .c5 {
    margin-top: 4rem;
    width: 50%;
  }

  .c5 input {
    font-size: 1.25rem;
  }
}

<div>
  <div
    className="c0"
    data-test="header-esu"
    onKeyDown={[Function]}
  >
    <a
      className="c1"
      data-test="header-esu-icon"
      href="#"
      onClick={[Function]}
      rel="noopener noreferrer"
      role="button"
      tabIndex="0"
      target="_self"
      title="Sign up for emails"
    >
      <img
        alt="Sign up for emails"
        className="c2"
        src="mock.asset"
      />
    </a>
    <div
      className="c3"
    >
      <div
        aria-modal="true"
        className="c4 c5"
      >
        <h2
          className="c6 c7"
          color="inherit"
          size="xxl"
        >
          Stay in the know!
        </h2>
        <div
          className="c8"
        >
          <div
            className="c9"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Get regular email updates and info on what we're up to!</p>",
              }
            }
          />
        </div>
        <form
          className="c10"
          onSubmit={[Function]}
        >
          <label
            className="c11 c12"
            htmlFor="email"
            onChange={[Function]}
          >
            <span
              className="c13 c14"
              color="inherit"
              size="s"
            >
              email
            </span>
            <input
              className="c15 c12"
              id="email"
              name="email"
              onChange={[Function]}
              placeholder="example@youremail.com"
              type="email"
              value=""
            />
            <span
              className="c16 c17"
              color="inherit"
              data-test="error-message"
              size="sm"
            >
              invalid email
            </span>
          </label>
          <div
            className="c18"
          >
            <button
              className="c19"
              color="red"
              data-test="subscribe-button"
              href="/#"
              onClick={[Function]}
              target="_self"
              type="button"
            >
              Subscribe
            </button>
          </div>
        </form>
        <div
          className="c20"
        >
          <div
            className="c9"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Our <a class=\\"link link--white inline\\" href=\\"/privacy-notice\\">Privacy Policy</a> describes how we handle and protect your information.<br><br>If you are under 18, please make sure you have your parents’ permission before providing us with any personal details.</p>",
              }
            }
          />
        </div>
      </div>
      <a
        className="c1 c21"
        data-test="header-esu-icon"
        href="#"
        onClick={[Function]}
        rel="noopener noreferrer"
        role="button"
        tabIndex="0"
        target="_self"
        title="Close email sign-up"
      >
        <img
          alt="Close email sign-up"
          className="c2"
          src="mock.asset"
        />
        <span
          className="c22"
        >
          (opens in new window)
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`renders correctly with modal closed 1`] = `
.c1 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  display: block;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.c1:hover,
.c1:focus {
  opacity: 0.6;
}

.c2 {
  width: 100%;
}

.c0 {
  width: 35px;
  height: 35px;
  display: inline-block;
}

<div>
  <div
    className="c0"
    data-test="header-esu"
    onKeyDown={[Function]}
  >
    <a
      className="c1"
      data-test="header-esu-icon"
      href="#"
      onClick={[Function]}
      rel="noopener noreferrer"
      role="button"
      tabIndex="0"
      target="_self"
      title="Sign up for emails"
    >
      <img
        alt="Sign up for emails"
        className="c2"
        src="mock.asset"
      />
    </a>
  </div>
</div>
`;

exports[`renders correctly with modal open 1`] = `
.c6 {
  font-size: 3rem;
  line-height: 3rem;
  text-transform: uppercase;
  font-weight: 400;
  font-family: 'Anton',Impact,sans-serif;
  -webkit-letter-spacing: 0.03rem;
  -moz-letter-spacing: 0.03rem;
  -ms-letter-spacing: 0.03rem;
  letter-spacing: 0.03rem;
}

.c13 {
  font-size: 1rem;
  line-height: 1rem;
  text-transform: inherit;
  font-weight: bold;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c17 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  padding: 0.5rem 1.25rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  font-size: 1rem;
  border-radius: 2rem;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
  height: 50px;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  background-color: #E52630;
  color: #FFFFFF;
}

.c17:hover {
  background-color: #890B11;
  color: #FFFFFF;
}

.c15 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 13px;
  font-size: 1.25rem;
  background-color: #FFFFFF;
  border: 1px solid;
  border-color: #000000;
  box-shadow: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #000000;
}

.c15:focus {
  border: 1px solid #666;
}

.c15:focus::-webkit-input-placeholder {
  color: #666;
}

.c15:focus::-moz-placeholder {
  color: #666;
}

.c15:focus:-ms-input-placeholder {
  color: #666;
}

.c15:focus::placeholder {
  color: #666;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c14 {
  visibility: border:0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c9 {
  text-align: left;
}

.c1 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  display: block;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.c1:hover,
.c1:focus {
  opacity: 0.6;
}

.c2 {
  width: 100%;
}

.c20 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 1rem;
  color: #FFFFFF;
  background-color: #2C0230;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
}

.c16 {
  margin-top: 1rem;
}

.c16 button {
  border-color: #2C0230;
  width: 100%;
  font-size: 1rem;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 1rem;
}

.c18 p {
  font-size: 1rem;
  line-height: 2rem;
}

.c18 p a {
  font-size: 1rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 1rem 0;
}

.c12 {
  width: 100%;
}

.c7 {
  margin-bottom: 1.5rem;
}

.c0 {
  width: 35px;
  height: 35px;
  display: inline-block;
}

.c3 {
  position: fixed;
  width: 100%;
  height: 100%;
  background-color: rgba(255,255,255,0.5);
  z-index: 100;
  top: 0;
  left: 0;
  overflow-y: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c3 div[aria-modal='true'] {
  padding: 2rem;
}

.c19 {
  position: absolute;
  top: 0;
  right: 0;
  width: 40px;
  height: 40px;
  margin-left: 0;
}

.c5 {
  width: 100%;
}

.c5 input {
  font-size: 1rem;
}

@media (min-width:740px) {
  .c17 {
    width: auto;
  }
}

@media (min-width:740px) {
  .c15 {
    max-width: 290px;
  }
}

@media (min-width:740px) {
  .c16 button {
    width: auto;
  }
}

@media (min-width:740px) {
  .c19 {
    margin: 4rem 0 0;
    right: 25%;
  }
}

@media (min-width:740px) {
  .c5 {
    margin-top: 4rem;
    width: 50%;
  }

  .c5 input {
    font-size: 1.25rem;
  }
}

<div>
  <div
    className="c0"
    data-test="header-esu"
    onKeyDown={[Function]}
  >
    <a
      className="c1"
      data-test="header-esu-icon"
      href="#"
      onClick={[Function]}
      rel="noopener noreferrer"
      role="button"
      tabIndex="0"
      target="_self"
      title="Sign up for emails"
    >
      <img
        alt="Sign up for emails"
        className="c2"
        src="mock.asset"
      />
    </a>
    <div
      className="c3"
    >
      <div
        aria-modal="true"
        className="c4 c5"
      >
        <h2
          className="c6 c7"
          color="inherit"
          size="xxl"
        >
          Stay in the know!
        </h2>
        <div
          className="c8"
        >
          <div
            className="c9"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Get regular email updates and info on what we're up to!</p>",
              }
            }
          />
        </div>
        <form
          className="c10"
          onSubmit={[Function]}
        >
          <label
            className="c11 c12"
            htmlFor="email"
            onChange={[Function]}
          >
            <span
              className="c13 c14"
              color="inherit"
              size="s"
            >
              email
            </span>
            <input
              className="c15 c12"
              id="email"
              name="email"
              onChange={[Function]}
              placeholder="example@youremail.com"
              type="email"
              value=""
            />
            
          </label>
          <div
            className="c16"
          >
            <button
              className="c17"
              color="red"
              data-test="subscribe-button"
              href="/#"
              onClick={[Function]}
              target="_self"
              type="button"
            >
              Subscribe
            </button>
          </div>
        </form>
        <div
          className="c18"
        >
          <div
            className="c9"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Our <a class=\\"link link--white inline\\" href=\\"/privacy-notice\\">Privacy Policy</a> describes how we handle and protect your information.<br><br>If you are under 18, please make sure you have your parents’ permission before providing us with any personal details.</p>",
              }
            }
          />
        </div>
      </div>
      <a
        className="c1 c19"
        data-test="header-esu-icon"
        href="#"
        onClick={[Function]}
        rel="noopener noreferrer"
        role="button"
        tabIndex="0"
        target="_self"
        title="Close email sign-up"
      >
        <img
          alt="Close email sign-up"
          className="c2"
          src="mock.asset"
        />
        <span
          className="c20"
        >
          (opens in new window)
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`renders correctly with success message 1`] = `
.c6 {
  font-size: 3rem;
  line-height: 3rem;
  text-transform: uppercase;
  font-weight: 400;
  font-family: 'Anton',Impact,sans-serif;
  -webkit-letter-spacing: 0.03rem;
  -moz-letter-spacing: 0.03rem;
  -ms-letter-spacing: 0.03rem;
  letter-spacing: 0.03rem;
}

.c9 {
  text-align: left;
}

.c1 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  display: block;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.c1:hover,
.c1:focus {
  opacity: 0.6;
}

.c2 {
  width: 100%;
}

.c12 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 1rem;
  color: #FFFFFF;
  background-color: #2C0230;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 1rem;
}

.c10 p {
  font-size: 1rem;
  line-height: 2rem;
}

.c10 p a {
  font-size: 1rem;
}

.c7 {
  margin-bottom: 1.5rem;
}

.c0 {
  width: 35px;
  height: 35px;
  display: inline-block;
}

.c3 {
  position: fixed;
  width: 100%;
  height: 100%;
  background-color: rgba(255,255,255,0.5);
  z-index: 100;
  top: 0;
  left: 0;
  overflow-y: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c3 div[aria-modal='true'] {
  padding: 2rem;
}

.c11 {
  position: absolute;
  top: 0;
  right: 0;
  width: 40px;
  height: 40px;
  margin-left: 0;
}

.c5 {
  width: 100%;
}

.c5 input {
  font-size: 1rem;
}

@media (min-width:740px) {
  .c11 {
    margin: 4rem 0 0;
    right: 25%;
  }
}

@media (min-width:740px) {
  .c5 {
    margin-top: 4rem;
    width: 50%;
  }

  .c5 input {
    font-size: 1.25rem;
  }
}

<div>
  <div
    className="c0"
    data-test="header-esu"
    onKeyDown={[Function]}
  >
    <a
      className="c1"
      data-test="header-esu-icon"
      href="#"
      onClick={[Function]}
      rel="noopener noreferrer"
      role="button"
      tabIndex="0"
      target="_self"
      title="Sign up for emails"
    >
      <img
        alt="Sign up for emails"
        className="c2"
        src="mock.asset"
      />
    </a>
    <div
      className="c3"
    >
      <div
        aria-modal="true"
        className="c4 c5"
      >
        <h2
          className="c6 c7"
          color="inherit"
          size="xxl"
        >
          Stay in the know!
        </h2>
        <div
          className="c8"
        >
          <div
            className="c9"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Thanks! Your first email will be with you shortly</p>",
              }
            }
          />
        </div>
        <div
          className="c10"
        >
          <div
            className="c9"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Our <a class=\\"link link--white inline\\" href=\\"/privacy-notice\\">Privacy Policy</a> describes how we handle and protect your information.<br><br>If you are under 18, please make sure you have your parents’ permission before providing us with any personal details.</p>",
              }
            }
          />
        </div>
      </div>
      <a
        className="c1 c11"
        data-test="header-esu-icon"
        href="#"
        onClick={[Function]}
        rel="noopener noreferrer"
        role="button"
        tabIndex="0"
        target="_self"
        title="Close email sign-up"
      >
        <img
          alt="Close email sign-up"
          className="c2"
          src="mock.asset"
        />
        <span
          className="c12"
        >
          (opens in new window)
        </span>
      </a>
    </div>
  </div>
</div>
`;
